--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/main_menu">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
+            android:id="@+id/goToCharacterList"
             app:destination="@id/CharacterList" />
         <action
-            android:id="@+id/action_FirstFragment_to_data"
+            android:id="@+id/goToData"
             app:destination="@id/Data" />
     </fragment>
     <fragment
@@ -25,22 +25,22 @@
         tools:layout="@layout/character_list">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
+            android:id="@+id/goToMainMenu"
             app:destination="@id/MainMenu" />
         <action
-            android:id="@+id/action_SecondFragment_to_thirdFragment"
+            android:id="@+id/goToCharacterView"
             app:destination="@id/CharacterView" />
     </fragment>
     <fragment
         android:id="@+id/CharacterView"
         android:name="com.example.dnd5emanager.CharacterView"
-        android:label="fragment_third"
+        android:label="@string/third_fragment_label"
         tools:layout="@layout/character_view" >
         <action
-            android:id="@+id/action_thirdFragment_to_SecondFragment"
+            android:id="@+id/goToCharacterList"
             app:destination="@id/CharacterList" />
         <action
-            android:id="@+id/action_thirdFragment_to_FirstFragment"
+            android:id="@+id/goToMainMenu"
             app:destination="@id/MainMenu" />
     </fragment>
     <fragment
@@ -49,7 +49,7 @@
         android:label="fragment_data"
         tools:layout="@layout/data_view" >
         <action
-            android:id="@+id/action_data_to_FirstFragment"
+            android:id="@+id/goToMainMenu"
             app:destination="@id/MainMenu" />
     </fragment>
 </navigation>
