--- a/app/src/main/res/layout/dm_manager.xml
+++ b/app/src/main/res/layout/dm_manager.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DmManger">
+    tools:context=".DMManager">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
