--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -9,12 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/fith_message" />
-
-    <Button
-        android:id="@+id/settingsback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/fithbutton" />
+        android:text="@string/fifth_message" />
 
 </FrameLayout>
