--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CharacterView">
+    tools:context=".CharacterCreatorPageOne">
 
     <EditText
         android:id="@+id/character_creator_page_one_enter_name"
