--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -57,28 +57,28 @@
     <fragment
         android:id="@+id/Data"
         android:name="com.example.dnd5emanager.DataView"
-        android:label="fragment_data"
+        android:label="Data"
         tools:layout="@layout/data_view" >
     </fragment>
 
     <fragment
         android:id="@+id/Settings"
         android:name="com.example.dnd5emanager.Settings"
-        android:label="fragment_Settings"
+        android:label="Settings"
         tools:layout="@layout/settings" >
     </fragment>
 
     <fragment
         android:id="@+id/Help"
         android:name="com.example.dnd5emanager.Help"
-        android:label="help"
+        android:label="Help"
         tools:layout="@layout/help" >
     </fragment>
 
     <fragment
         android:id="@+id/DMManager"
         android:name="com.example.dnd5emanager.DMManager"
-        android:label="fragment_dm_manager"
+        android:label="Dungeon Master Manger"
         tools:layout="@layout/dm_manager" >
         <action
             android:id="@+id/action_DMManager_to_campaignList"
@@ -88,12 +88,12 @@
     <fragment
         android:id="@+id/CharacterCreatorPageOne"
         android:name="com.example.dnd5emanager.CharacterCreatorPageOne"
-        android:label="CharacterCreatorPageOne" >
+        android:label="Character Creator" >
     </fragment>
     <fragment
         android:id="@+id/campaignList"
         android:name="com.example.dnd5emanager.CampaignList"
-        android:label="campaign_list"
+        android:label="Campaign list"
         tools:layout="@layout/campaign_list" >
         <action
             android:id="@+id/action_campaignList_to_campaignSheet"
@@ -105,7 +105,7 @@
     <fragment
         android:id="@+id/campaignSheet"
         android:name="com.example.dnd5emanager.CampaignSheet"
-        android:label="campaign_sheet"
+        android:label="Campaign Sheet"
         tools:layout="@layout/campaign_sheet" >
         <action
             android:id="@+id/action_campaignSheet_to_dmPlayerManager"
@@ -117,7 +117,7 @@
     <fragment
         android:id="@+id/dmPlayerManager"
         android:name="com.example.dnd5emanager.DmPlayerManager"
-        android:label="dm_player_manager"
+        android:label="Dungeon Master's Player Manager"
         tools:layout="@layout/dm_player_manager" >
         <action
             android:id="@+id/action_dmPlayerManager_to_campaignSheet"
