- Added ability score selectors to character_creator_page_one.xml. - Tweaked how CharacterCreatorPageOne.java works. - Messed with Classes in PlayerCharacter.java

--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -8,7 +8,7 @@
     tools:context=".CharacterCreatorPageOne">
 
     <EditText
-        android:id="@+id/character_creator_page_one_enter_name"
+        android:id="@+id/character_creator_page_one_edit_name"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="30dp"
@@ -21,7 +21,7 @@
         tools:ignore="Autofill" />
 
     <EditText
-        android:id="@+id/character_creator_page_one_enter_level"
+        android:id="@+id/character_creator_page_one_edit_level"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
@@ -35,7 +35,7 @@
         tools:ignore="Autofill" />
 
     <Spinner
-        android:id="@+id/character_creator_page_one_select_race"
+        android:id="@+id/character_creator_page_one_edit_race"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="30dp"
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/character_creator_page_one_select_subrace"
+        android:id="@+id/character_creator_page_one_edit_subrace"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="30dp"
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/character_creator_page_one_select_class"
+        android:id="@+id/character_creator_page_one_edit_class"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginTop="100dp"
@@ -73,42 +73,146 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/character_creator_page_one_strength_display_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="STR"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_strength"
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_strength"
+        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_subrace" />
+
     <EditText
-        android:id="@+id/editStrength"
-        android:layout_width="75dp"
+        android:id="@+id/character_creator_page_one_edit_intelligence"
+        android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginStart="184dp"
         android:ems="10"
         android:inputType="number"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_intelligence_display_text" />
+
+    <TextView
+        android:id="@+id/character_creator_page_one_intelligence_display_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:text="INT"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_intelligence"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_intelligence"
+        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_strength" />
+
+    <TextView
+        android:id="@+id/character_creator_page_one_dexterity_display_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="DEX"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_dexterity"
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_dexterity"
+        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_class" />
+
+    <TextView
+        android:id="@+id/character_creator_page_one_constitution_display_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="CON"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_constitution"
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_constitution"
+        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_class" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_strength"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginEnd="68dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toStartOf="@id/character_creator_page_one_edit_constitution"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editDexterity"
-        android:layout_width="75dp"
+        android:id="@+id/character_creator_page_one_edit_dexterity"
+        android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginEnd="120dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_constitution"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="240dp"
         android:layout_marginEnd="60dp"
         android:ems="10"
         android:inputType="number"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editConstitution"
-        android:layout_width="75dp"
+        android:id="@+id/character_creator_page_one_edit_wisdom"
+        android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="number"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/character_creator_page_one_edit_intelligence"
+        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_wisdom_display_text" />
+
+    <TextView
+        android:id="@+id/character_creator_page_one_wisdom_display_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:text="WIS"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_wisdom"
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_wisdom"
+        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_edit_dexterity" />
+
+    <EditText
+        android:id="@+id/character_creator_page_one_edit_charisma"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="9dp"
+        android:ems="10"
+        android:inputType="number"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/character_creator_page_one_edit_wisdom"
+        app:layout_constraintTop_toBottomOf="@+id/character_creator_page_one_charisma_display_text" />
+
+    <TextView
+        android:id="@+id/character_creator_page_one_charisma_display_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:text="CHA"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_charisma"
+        app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_charisma"
+        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_edit_constitution" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
